@@ -59,6 +59,9 @@ public:
   /** @since 1.8
    */
   Matrix get_matrix() const;
+  /* To keep 1.6.x ABI  */
+  void set_matrix(const cairo_matrix_t& matrix);
+  void get_matrix(cairo_matrix_t& matrix) const;
   PatternType get_type() const;
 
   typedef cairo_pattern_t cobject;
